--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ form {
 #top-section {
   background-color: #f0d3d3;
   max-width: 100vw;
-  min-height: 450px;
+  height: 604px;
   display: flex;
   justify-content: center;
   align-items: center;
