--- a/style.css
+++ b/style.css
@@ -191,7 +191,5 @@ form {
   font-size: 18px;
   line-height: 20px;
   color: #14203e;
-  margin-left: 32px;
-  margin-bottom: 17px;
-  margin-top: 150px;
+  margin: 0px 56px;
 }
